welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: not found: value estFasseMur
while (estFasseMur == false){
       ^Runner:5: error: not found: value estFasseMur
while (estFasseMur == true){
       ^Runner:12: error: not found: value estFasseMur
while (estFasseMur == false){
       ^