welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (estFasseMur == false){
	avance()
}
while (estFasseMur == true){
	     gauche() 
		avance()
		droite()
		avance()
	
}
while (estFasseMur == false){
	avance()
}